--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -116,9 +116,8 @@
       <div class="col-lg-3">
         <h1 class="my-4">KIKBACK</h1>
         <div class="list-group">
-          <a href="#" class="list-group-item active">Size 8 </a>
-          <a href="#" class="list-group-item">Size 8.5</a>
-          <a href="#" class="list-group-item">Size 9</a>
+          <a href="#" class="list-group-item active">THEKIKBACKSTEALS $100 & Under</a>
+
         </div>
       </div>
       <!-- /.col-lg-3 -->
@@ -126,77 +125,127 @@
       <div class="col-lg-9">
 
         <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886475/8989D7FF-A81C-4EE0-92E7-0359FBA4F163.jpeg?auto=format&fit=max&h=600&w=600">
+          <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/242692784/FEAF74EE-D7E2-40EA-93B6-41A5873834F6.jpeg?auto=format&fit=max&h=600&w=600">
           <div class="card-body">
-            <h3 class="card-title">Pure Money 4's</h3>
-            <h4>$140.00</h4>
+            <h3 class="card-title">New Balance 990 Green</h3>
+            <h4>$90.00</h4>
             <p class="card-text">
             </p>
             <span class="text-warning"></span>
 
         </div>
+      </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886430/7A4F8CC0-F192-4D5B-BE1A-7A8CDEF17ED5.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237887210/6004EB29-154B-4905-B5AB-A08B0961DCC1.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">NYC 10's</h3>
-          <h4>$130.00</h4>
-          <p class="card-text">
-          </p>
-          <span class="text-warning"></span>
-          
-        </div>
-       <!-- ----------------------------------------------------------------- -->
-       <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886400/BF22CC9E-A179-4AB4-A99B-5238F3F55565.jpeg?auto=format&fit=max&h=600&w=600">
-        <div class="card-body">
-          <h3 class="card-title">Duke kyrie 5's</h3>
-          <h4>$165.00</h4>
+          <h3 class="card-title">Air Flight Hurache White Yellow Purple'srie 5's</h3>
+          <h4>$65.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
           <form action="/action_page.php">
-            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+            <input type="checkbox" name="vehicle1" value="Bike"> Add to cart<br>
         </div>
+      </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886310/012E4F24-6E04-4D10-BE1C-DC217865C40E.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/233966912/A9ACE246-AD40-41BA-9424-69E10E1D45B6.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
-          <h3 class="card-title">Camo High 3M 1's</h3>
-          <h4>$150.00</h4>
+          <h3 class="card-title">Chicago 2's</h3>
+          <h4>$100.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
           <form action="/action_page.php">
-            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+            <input type="checkbox" name="vehicle1" value="Bike"> Add to cart<br>
         </div>
+      </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/224029006/5581EFB6-1934-4BFF-985A-CCC8FD9AC1F2.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="">
         <div class="card-body">
-          <h3 class="card-title">Deep Royal Blue 12's</h3>
-          <h4>$250.00</h4>
+          <h3 class="card-title">Chrome 8's</h3>
+          <h4>$90.00</h4>
           <p class="card-text">
           </p>
           <span class="text-warning"></span>
           <form action="/action_page.php">
-            <input type="checkbox" name="vehicle1" value="Bike"> I want<br>
+            <input type="checkbox" name="vehicle1" value="Bike"> Add to cart<br>
         </div>
+      </div>
        <!-- ----------------------------------------------------------------- -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="">
+        <div class="card-body">
+          <h3 class="card-title">KD 7 35,000 Degree's</h3>
+          <h4>$90.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> Add to cart<br>
+        </div>
+      </div>
+       <!-- ----------------------------------------------------------------- -->
+       <div class="card mt-4">
+        <img class="card-img-top img-fluid" src="">
+        <div class="card-body">
+          <h3 class="card-title">Teal 4's</h3>
+          <h4>$65.00</h4>
+          <p class="card-text">
+          </p>
+          <span class="text-warning"></span>
+          <form action="/action_page.php">
+            <input type="checkbox" name="vehicle1" value="Bike"> Add to cart<br>
+        </div>
+      </div>
+       <!-- ----------------------------------------------------------------- -->
+       <!-- /.card -->
 
-        <!-- /.card -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- ================================================================================= -->
+        <!-- =================== begin button definitions =================================== -->
+        <!-- ================================================================================= -->
         <div class="card card-outline-secondary my-4">
           <div class="card-header">
             
           </div>
           <div class="card-body">
+            <!-- checkout button -->
+            <a href="./checkout.html" class="btn btn-success">Checkout</a>
             <hr>
-            <a href="#" class="btn btn-success">back to the tops</a>
+            <!-- top of page button -->
+            <a href="#" class="btn btn-success">Top of Page</a>
           </div>
         </div>
-        <!-- /.card -->
+        <!-- ================================================================================= -->
+        <!-- ===================== end button definitions =================================== -->
+        <!-- ================================================================================= -->
 
+
+
+
+
+
+
+
+        <!-- /.card -->
       </div>
       <!-- /.col-lg-9 -->
 
@@ -230,6 +279,3 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
-</body> <!--style starts here --> 
-
-</style>
