--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -163,7 +163,7 @@
       </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/233966912/A9ACE246-AD40-41BA-9424-69E10E1D45B6.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
           <h3 class="card-title">Chrome 8's</h3>
           <h4>$90.00</h4>
@@ -176,7 +176,7 @@
       </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/229358942/BA8E97EB-FACA-43FC-B24B-A6F941619413.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
           <h3 class="card-title">KD 7 35,000 Degree's</h3>
           <h4>$90.00</h4>
@@ -189,7 +189,7 @@
       </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/210968791/product_image.jpg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
           <h3 class="card-title">Teal 4's</h3>
           <h4>$65.00</h4>
@@ -199,7 +199,7 @@
           <form action="/action_page.php">
             <input type="checkbox" name="vehicle1" value="Bike"> Add to cart<br>
         </div>
-      </div>
+      </div>  
        <!-- ----------------------------------------------------------------- -->
        <!-- /.card -->
 
