--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <title>Shop Homepage - Start Bootstrap Template</title>
 
@@ -21,10 +23,14 @@
   <!-- social Icons Begin -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
   <!-- social Icons end  -->
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="main.js"></script>
   </head>
  <!-- Social Icons End -->
 
@@ -134,11 +140,15 @@
   <center>
     <iframe width="1200" height="850" src="https://www.youtube.com/embed/uVUeBOuI8Ik" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </center>
+  <hr>
+</body>
+
   
   <!-- sidebar Begins Heres -->
-
-<!-- Sidebar 1 Ends -->
-
+  
+  <div class="div1">Both divs are the same size now!</div>
+<br>
+<div class="div2">Hooray!</div>
 
 
 
@@ -146,18 +156,23 @@
   </body><!-- body ends here -->
   
  <!-- Footer -->
- <footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
 
-    <div class="social-icons">
-        <a href="https://www.instagram.com/thekikback/">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://facebook.com/thekikback">
-          <i class="fab fa-facebook"></i>
-        </a>  
-  </div>
+
+ <footer class="py-5 bg-dark">
+  <div class="container" style="display:inline-block; max-width:100%">
+    <div id="left-footer">
+      <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
+    </div>
+    
+
+  <!-- social icons -->
+  <div id="right-footer">
+        <ul class="social-icon">
+            <li><a href="https://www.facebook.com/Thekikback/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/thekikback/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            </ul>
+            <!-- </social icons> -->
+</div>
  
 </footer>
 
