--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -82,8 +82,8 @@
 <!-- DropDown NavBar 2 Begins Here -->
 <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Repair
-  </a>
+      
+  </a>Maintenance
   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
     <a class="dropdown-item" href="#">.</a>
     <a class="dropdown-item" href="#">..</a>
@@ -130,7 +130,7 @@
             <h3 class="card-title">New Balance 990 Green</h3>
             <h4>$90.00</h4>
             <p class="card-text">
-            </p>
+            </p> SOLD OUT
             <span class="text-warning"></span>
 
         </div>
@@ -150,7 +150,7 @@
       </div>
        <!-- ----------------------------------------------------------------- -->
        <div class="card mt-4">
-        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/233966912/A9ACE246-AD40-41BA-9424-69E10E1D45B6.jpeg?auto=format&fit=max&h=600&w=600">
+        <img class="card-img-top img-fluid" src="https://assets.bigcartel.com/product_images/237886598/63A3B394-A36A-48A0-9AD6-77A18265AB00.jpeg?auto=format&fit=max&h=600&w=600">
         <div class="card-body">
           <h3 class="card-title">Chicago 2's</h3>
           <h4>$100.00</h4>
