--- a/purchase-item/checkout.html
+++ b/purchase-item/checkout.html
@@ -43,8 +43,8 @@
                 <h3>Payment</h3>
                 <label for="fname">Accepted Cards</label>
                 <div class="icon-container">
-                  <i class="fa fa-cc-visa" style="color:navy;"></i>
-                  <i class="fa fa-cc-amex" style="color:blue;"></i>
+                  <i class="fa fa-cc-visa" style="color:rgb(4, 4, 255);"></i>
+                  <i class="fa fa-cc-amex" style="color:rgb(0, 0, 233);"></i>
                   <i class="fa fa-cc-mastercard" style="color:red;"></i>
                   <i class="fa fa-cc-discover" style="color:orange;"></i>
                 </div>
