--- a/shop/Sneaker Sizes/size-14.html
+++ b/shop/Sneaker Sizes/size-14.html
@@ -131,3 +131,66 @@
       <div class="col-lg-9">
         <div class="row">
           
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/224601373/A1C7493C-4AD9-4F04-B5A4-7D4BE6E7CA0D.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">Court Purple 1's</a>
+                </h4>
+                <h5>$350.00</h5>
+                <p class="card-text"></p>
+              </div>
+              
+            </div>
+          </div>
+
+             <!-- /.row -->
+
+      </div>
+      <!-- /.col-lg-9 -->
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+
+
+  <center>
+      <div class="pagination">
+   
+          <a href="./page1.html">1</a>
+          <a href="./page2.html" class="active">2</a>
+
+        </div>
+    </center>
+
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
+
+      <div class="social-icons">
+          <a href="https://www.instagram.com/thekikback/">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://facebook.com/thekikback">
+            <i class="fab fa-facebook"></i>
+          </a>  
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body> <!-- body ends here -->
+<!-- ----------------------------------------------------------------- -->
+<!-- ----------------------------------------------------------------- -->
+<!-- ----------------------------------------------------------------- -->
+
+</html>
