--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+            
+
+            <a href="./index.html">
+              <img src="./img/Navbar.jpg">
+            </a>
           </li>
   
           <!-- DropDown NavBar 1 Begins Here  -->
@@ -123,7 +127,26 @@
       </div>
     </nav>
 <div class="row">
-  <div class="col-md-3">Hello world</div>
+  <div class="col-md-3">
+    
+      <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/237886400/BF22CC9E-A179-4AB4-A99B-5238F3F55565.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Duke Kyrie 5's</a>
+            </h4>
+            <h5>$165.00
+            </h5>
+            <p class="card-text">Duke Kyrie 5 
+              Size 8 with original box 
+              Shoes are brand new condition 
+              Shoes will be shipped double boxed with tracking</p>
+          </div>
+
+
+  
+        </div>
+  </div>
   <div class="col-md-9">
    
   
