--- a/shop/sneaker-sizes/sizes-11.5.html
+++ b/shop/sneaker-sizes/sizes-11.5.html
@@ -81,6 +81,28 @@
             </div>
       <!-- Dropdown NavBar 1 Ends Here -->
       
+       <!-- DropDown NavBar 1 Begins Here  -->
+       <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Sneaker Size
+  
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="./size-8.html">Size 8</a>
+          <a class="dropdown-item" href="./size-8.5.html">Size 8.5</a>
+          <a class="dropdown-item" href="./size-9.hmtl">Size 9</a>
+          <a class="dropdown-item" href="./size-9.5.html">Size 9.5</a>
+          <a class="dropdown-item" href="./size-10.html">Size 10</a>
+          <a class="dropdown-item" href="./size-10.5.html">Size 10.5</a>
+          <a class="dropdown-item" href="./size-11.hmtl">Size 11</a>
+          <a class="dropdown-item" href="./size-11.5.html">Size 11.5</a>
+          <a class="dropdown-item" href="./size-12.html">Size 12</a>
+          <a class="dropdown-item" href="./size-13.html">Size 13</a>
+          <a class="dropdown-item" href="./size-14.html">Size 14</a>
+          </div> 
+       
+  <!-- Dropdown NavBar 1 Ends Here -->
+
       <!-- DropDown NavBar 2 Begins Here -->
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
