--- a/shop/sneaker-sizes/size-8.html
+++ b/shop/sneaker-sizes/size-8.html
@@ -100,17 +100,17 @@
             
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-8.html">Size 8</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-8.5.html">Size 8.5</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-9.hmtl">Size 9</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-9.5.html">Size 9.5</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-10.html">Size 10</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-10.5.html">Size 10.5</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-11.hmtl">Size 11</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-11.5.html">Size 11.5</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-12.html">Size 12</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-13.html">Size 13</a>
-                    <a class="dropdown-item" href="./shop/sneaker-size/size-14.html">Size 14</a>
+                    <a class="dropdown-item" href="./size-8.html">Size 8</a>
+                    <a class="dropdown-item" href="./size-8.5.html">Size 8.5</a>
+                    <a class="dropdown-item" href="./size-9.hmtl">Size 9</a>
+                    <a class="dropdown-item" href="./size-9.5.html">Size 9.5</a>
+                    <a class="dropdown-item" href="./size-10.html">Size 10</a>
+                    <a class="dropdown-item" href="./size-10.5.html">Size 10.5</a>
+                    <a class="dropdown-item" href="./size-11.hmtl">Size 11</a>
+                    <a class="dropdown-item" href="./size-11.5.html">Size 11.5</a>
+                    <a class="dropdown-item" href="./size-12.html">Size 12</a>
+                    <a class="dropdown-item" href="./size-13.html">Size 13</a>
+                    <a class="dropdown-item" href="./size-14.html">Size 14</a>
                     </div> 
                  
             <!-- Dropdown NavBar 1 Ends Here -->
