--- a/shop/kickback-steals/page1.html
+++ b/shop/kickback-steals/page1.html
@@ -121,7 +121,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Brand New</h1>
+        <h1 class="my-4">Kikback Steal</h1>
         <div class="list-group">
           <div class="list-group">
             <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
