--- a/index.html
+++ b/index.html
@@ -18,20 +18,15 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
 
   <!-- social Icons Begin -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
   <!-- social Icons end  -->
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="main.js"></script>
+  
   </head>
  <!-- Social Icons End -->
 
@@ -77,8 +72,11 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
+
+              <a href="./index.html">
+                <img src="./img/Navbar.jpg">
+              </a>
+            </li>
   
           <!-- DropDown NavBar 1 Begins Here  -->
     <li class="nav-item dropdown">
@@ -122,6 +120,8 @@
         
       </div>
     </nav>
+<br>
+<br>
 
 <div class="row">
 
