--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -18,7 +18,6 @@
 
 
     <!-- social Icons Begin -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
@@ -80,10 +79,8 @@
  
     <center>
         <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
-              <div><a href="http://share.here.com/r/mylocation/e-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0=?link=addresses&amp;fb_locale=en_US&amp;ref=facebook&amp;fbclid=IwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs"
-           target="_blank" rel="noopener nofollow" 
-           data-lynx-mode="asynclazy" 
-           data-lynx-uri="https://l.facebook.com/l.php?u=http%3A%2F%2Fshare.here.com%2Fr%2Fmylocation%2Fe-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0%3D%3Flink%3Daddresses%26fb_locale%3Den_US%26ref%3Dfacebook%26fbclid%3DIwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs&amp;h=AT2AtnsL4GMP2ENA9rXpRgo7EAL4IaDQHujmpSn3eUCnbdkhC5nKkTIo51dRhr3_d13lt73SAHE5yArBiAFPTFvWB92lBC5tEANZdfjDq5x9MZExLBdlJM5KLt5leYaM132e">Get Directions</a></div>      
+        <div>
+        </div>      
     </center>
 
 
@@ -343,7 +340,20 @@
  <footer class="py-5 bg-dark">
     <div class="container" style="display:inline-block; max-width:100%">
       <div id="left-footer">
-        <h5 class="m-0 text-center text-white" text> The KikBack &copy; 2019</h5>
+        <h5 class="m-0 text-center text-white" text>
+          The KikBack &copy; 2019
+          <br>
+          <a
+            id="get-directions"
+            href="http://share.here.com/r/mylocation/e-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0=?link=addresses&amp;fb_locale=en_US&amp;ref=facebook&amp;fbclid=IwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs"
+            target="_blank"
+            rel="noopener nofollow" 
+            data-lynx-mode="asynclazy" 
+            data-lynx-uri="https://l.facebook.com/l.php?u=http%3A%2F%2Fshare.here.com%2Fr%2Fmylocation%2Fe-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0%3D%3Flink%3Daddresses%26fb_locale%3Den_US%26ref%3Dfacebook%26fbclid%3DIwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs&amp;h=AT2AtnsL4GMP2ENA9rXpRgo7EAL4IaDQHujmpSn3eUCnbdkhC5nKkTIo51dRhr3_d13lt73SAHE5yArBiAFPTFvWB92lBC5tEANZdfjDq5x9MZExLBdlJM5KLt5leYaM132e">
+              Get Directions
+          </a>
+
+        </h5>
       </div>
       
   
