--- a/about/index.html
+++ b/about/index.html
@@ -81,9 +81,10 @@
       <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
       </center>
 
-  <!-- NavBar begins here -->
- 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  
+<!-- NavBar begins here -->
+<center>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -91,8 +92,11 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
+
+            <a href="../../index.html">
+              <img src="../img/Navbar.jpg">
+            </a>
+          </li>
 
         <!-- DropDown NavBar 1 Begins Here  -->
   <li class="nav-item dropdown">
@@ -101,10 +105,10 @@
 
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="./shop/Brand-new/page1.html">Brand New</a>
-        <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
-        <a class="dropdown-item" href="./shop/used-8.10/page1.hmtl">Used (8/10 Condition)</a>
-        <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="../shop/Brand-new/page1.html">Brand New</a>
+        <a class="dropdown-item" href="../shop/used-9.10/page1.htm">Used (9/10 Condition)</a>
+        <a class="dropdown-item" href="../shop/used-8.10/page1.html">Used (8/10 Condition)</a>
+        <a class="dropdown-item" href="../shop/kickback-steals/page1.html">KickBack Steals</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
