--- a/shop/sneaker-sizes/size-9.5.html
+++ b/shop/sneaker-sizes/size-9.5.html
@@ -90,11 +90,11 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="./size-8.html">Size 8</a>
           <a class="dropdown-item" href="./size-8.5.html">Size 8.5</a>
-          <a class="dropdown-item" href="./size-9.hmtl">Size 9</a>
+          <a class="dropdown-item" href="./size-9.html">Size 9</a>
           <a class="dropdown-item" href="./size-9.5.html">Size 9.5</a>
           <a class="dropdown-item" href="./size-10.html">Size 10</a>
           <a class="dropdown-item" href="./size-10.5.html">Size 10.5</a>
-          <a class="dropdown-item" href="./size-11.hmtl">Size 11</a>
+          <a class="dropdown-item" href="./size-11.html">Size 11</a>
           <a class="dropdown-item" href="./size-11.5.html">Size 11.5</a>
           <a class="dropdown-item" href="./size-12.html">Size 12</a>
           <a class="dropdown-item" href="./size-13.html">Size 13</a>
@@ -235,7 +235,7 @@
                         <p class="card-text"></p>
                     </div>
                  </div>
-                </div>> <!-- size 9.5 shoes end here -->
+                </div> <!-- size 9.5 shoes end here -->
                       <!-- -------------------------------------------------------------------------------- -->
                       <!-- -------------------------------------------------------------------------------- -->
                       <!-- -------------------------------------------------------------------------------- -->
