--- a/shop/sneaker-sizes/sizes-13.html
+++ b/shop/sneaker-sizes/sizes-13.html
@@ -8,8 +8,20 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-<link rel="stylesheet" href="./css/size-9.5-9-style.css">
+  <title>Shop Homepage - Start Bootstrap Template</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/shop-homepage.css" rel="stylesheet">
+
+  <!-- social Icons Begin -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -81,8 +93,8 @@
             </div>
       <!-- Dropdown NavBar 1 Ends Here -->
       
-       <!-- DropDown NavBar 1 Begins Here  -->
-       <li class="nav-item dropdown">
+      <!-- DropDown NavBar 1 Begins Here  -->
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          Sneaker Size
   
@@ -90,11 +102,11 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="./size-8.html">Size 8</a>
           <a class="dropdown-item" href="./size-8.5.html">Size 8.5</a>
-          <a class="dropdown-item" href="./size-9.hmtl">Size 9</a>
+          <a class="dropdown-item" href="./size-9.html">Size 9</a>
           <a class="dropdown-item" href="./size-9.5.html">Size 9.5</a>
           <a class="dropdown-item" href="./size-10.html">Size 10</a>
           <a class="dropdown-item" href="./size-10.5.html">Size 10.5</a>
-          <a class="dropdown-item" href="./size-11.hmtl">Size 11</a>
+          <a class="dropdown-item" href="./size-11.html">Size 11</a>
           <a class="dropdown-item" href="./size-11.5.html">Size 11.5</a>
           <a class="dropdown-item" href="./size-12.html">Size 12</a>
           <a class="dropdown-item" href="./size-13.html">Size 13</a>
