--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -206,10 +206,7 @@
                     <a href="#">Kd 7 35,000 Degree's</a>
                   </h4>
                   <h5>$90.00</h5>
-                  <p class="card-text">Kd 7 35,000 Degree's 
-                    Size 10 with original box 
-                    Shoes are in 9/10 condition 
-                    Shoes will be shipped double boxed with tracking
+                  <p class="card-text">
                     
                     </p>
                 </div>
@@ -227,10 +224,7 @@
                     <a href="#">Knicks Uptempo's</a>
                   </h4>
                   <h5>$180.00</h5>
-                  <p class="card-text">Knicks Uptempo 
-                    Size 9.5 with original box 
-                    Shoes are in 9/10 condition 
-                    Shoes will be shipped double boxed with tracking</p>
+                  <p class="card-text"></p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -246,10 +240,7 @@
                     <a href="#">Camo 5's</a>
                   </h4>
                   <h5>$130.00</h5>
-                  <p class="card-text">Camo 5 
-                    Size 13 with original box 
-                    Shoes are in 9/10 condition 
-                    Shoes will be shipped double boxed with tracking</p>
+                  <p class="card-text"></p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -265,10 +256,7 @@
                     <a href="#">Gamma 11's</a>
                   </h4>
                   <h5>$300.00</h5>
-                  <p class="card-text">Gamma 11 High 
-                    Size 10 with original box 
-                    Shoes are in 9/10 condition 
-                    Shoes will be shipped double boxed with tracking</p>
+                  <p class="card-text"></p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -284,10 +272,7 @@
                     <a href="#">White Gatorade 6's</a>
                   </h4>
                   <h5>$125.00</h5>
-                  <p class="card-text">White Gatorade 6 
-                    Size 8.5 with original box 
-                    Shoes condition varies by size 
-                    Shoes will be shipped double boxed with tracking</p>
+                  <p class="card-text"></p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -303,10 +288,7 @@
                     <a href="#">Teal 4's</a>
                   </h4>
                   <h5>$65.00</h5>
-                  <p class="card-text">Teal 4 
-                    Size 5.5y with original all 
-                    Shoes condition varies by size 
-                    Shoes will be shipped double boxed with tracking</p>
+                  <p class="card-text"></p>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
