--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -62,7 +62,7 @@
   <!-- NavBar begins here -->
  
     <center>
-      <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
+      <img src="">
     
       <div><a href="http://share.here.com/r/mylocation/e-eyJuYW1lIjoiVGhla2lrYmFjayIsImFkZHJlc3MiOiIxNiBOb3J0aCBCcm9hZCBTdCwgTWlkZGxldG93biwgRGVsYXdhcmUiLCJsYXRpdHVkZSI6MzkuNDUwMjgsImxvbmdpdHVkZSI6LTc1LjcxNzEsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MTg5MzgwMTUxNzUxODI5MX0=?link=addresses&amp;fb_locale=en_US&amp;ref=facebook&amp;fbclid=IwAR1sFWRZsavZVpPE1l4ir1lQyd6orQ5PPExMC7PqbXW6TFkZfoE1jgCWiRs"
          target="_blank" rel="noopener nofollow" 
