--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -78,7 +78,7 @@
       
  
     <center>
-        <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
+        <img src="">
         <div>
         </div>      
     </center>
