--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -275,7 +275,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
 </body> <!-- body ends here -->
 <!-- ----------------------------------------------------------------- -->
