--- a/shop/kickback-steals/page1.html
+++ b/shop/kickback-steals/page1.html
@@ -124,7 +124,7 @@
         <h1 class="my-4">Kikback Steal</h1>
         <div class="list-group">
           <div class="list-group">
-            <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
+            <a href="../../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
             <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
             <a href="../kickback-steals/page1.html" class="list-group-item">KickBack Steals</a>
           </div>
