--- a/index.html
+++ b/index.html
@@ -91,8 +91,30 @@
           <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
         </div>
   <!-- Dropdown NavBar 1 Ends Here -->
+
+    <!-- DropDown NavBar 2 Begins Here  -->
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+       Sneaker Size
+
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-8.html">Size 8</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-8.5.html">Size 8.5</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-9.html">Size 9</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-9.5.html">Size 9.5</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-10.html">Size 10</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-10.5.html">Size 10.5</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-11.html">Size 11</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/sizes-11.5.html">Size 11.5</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-12.html">Size 12</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-13.html">Size 13</a>
+        <a class="dropdown-item" href="./shop/sneaker-sizes/size-14.html">Size 14</a>
+        </div> 
+     
+<!-- Dropdown NavBar 2 Ends Here -->
   
-  <!-- DropDown NavBar 2 Begins Here -->
+  <!-- DropDown NavBar 3 Begins Here -->
   <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Restoration
