--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -379,6 +379,15 @@
   </div>
   <!-- /.container -->
 
+  <center >
+    <div class="pagination">
+   
+        <a href="./page1.html" class="active">1</a>
+        <a href="./page2.html">2</a>
+    
+
+      </div>
+    </center>
 
   
   <!-- Footer -->
