--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -114,7 +114,7 @@
   <!-- Dropdown NavBar 3 Ends Here -->
 
   <li class="nav-item">
-      <a class="nav-link" href="./about/index.html">About</a>
+      <a class="nav-link" href="../../about/index.html">About</a>
       <li class="nav-item">
           <a class="nav-link" href="#">Accesories</a>
           
