--- a/about/index.html
+++ b/about/index.html
@@ -77,10 +77,7 @@
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
 
-  <center>
-      <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
-      </center>
-
+  
   
 <!-- NavBar begins here -->
 <center>
@@ -93,7 +90,7 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
 
-            <a href="../../index.html">
+            <a href="../index.html">
               <img src="../img/Navbar.jpg">
             </a>
           </li>
@@ -112,7 +109,29 @@
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
-<!-- DropDown NavBar 2 Begins Here -->
+<!-- DropDown NavBar 2 Begins Here  -->
+<li class="nav-item dropdown">
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+   Sneaker Size
+
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-8.html">Size 8</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-8.5.html">Size 8.5</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-9.html">Size 9</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-9.5.html">Size 9.5</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-10.html">Size 10</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-10.5.html">Size 10.5</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-11.html">Size 11</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/sizes-11.5.html">Size 11.5</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-12.html">Size 12</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-13.html">Size 13</a>
+    <a class="dropdown-item" href="../shop/sneaker-sizes/size-14.html">Size 14</a>
+    </div> 
+ 
+<!-- Dropdown NavBar 2 Ends Here -->
+
+<!-- DropDown NavBar 3 Begins Here -->
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Repair
@@ -122,7 +141,7 @@
       <a class="dropdown-item" href="#">..</a>
       <a class="dropdown-item" href="#">...</a>
     </div>
-  <!-- Dropdown NavBar 2 Ends Here -->
+  <!-- Dropdown NavBar 3 Ends Here -->
 
   <li class="nav-item">
       <a class="nav-link" href="./about/index.html">About</a>
@@ -188,8 +207,9 @@
       </a>
     </div>
     
-    </body>
-    </html>
+   <br>
+   <br>
+   <hr>
     <!-- End of SlideShow -->
 
     
