--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -15,7 +15,7 @@
   
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="style">
 
   <link href="css/page1-style.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -94,9 +94,9 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         <a class="dropdown-item list-group-textwhite" href="../Brand-new/page1.html">Brand New</a>
-        <a class="dropdown-item" href="./used-9.10/page1.html">Used (9/10 Condition)</a>
-        <a class="dropdown-item" href="./used-8.10/page1.hmtl">Used (8/10 Condition)</a>
-        <a class="dropdown-item" href="./kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="../used-9.10/page1.html">Used (9/10 Condition)</a>
+        <a class="dropdown-item" href="../used-8.10/page1.hmtl">Used (8/10 Condition)</a>
+        <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
