--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -45,9 +45,10 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
+  
   <center>
-    <img src="https://assets.bigcartel.com/theme_images/33480736/THEKIKBACK_LOGO.jpg?auto=format&fit=max&h=250&w=1300">
-    </center>
+    <img src="">
+  </center>
 
 <!-- NavBar begins here -->
 <center>
