--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="./shop/Brand-new/page1.html">Brand New</a>
+          <a class="dropdown-item" href="./shop/brand-new/page1.html">Brand New</a>
           <a class="dropdown-item" href="./shop/used-9.10/page1.html">Used (9/10 Condition)</a>
           <a class="dropdown-item" href="./shop/used-8.10/page1.html">Used (8/10 Condition)</a>
           <a class="dropdown-item" href="./shop/kickback-steals/page1.html">KickBack Steals</a>
