--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -54,7 +54,8 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0" style="padding-top: 50px;">
+
         <li class="nav-item active">
 
             <a href="../../index.html">
