--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -45,15 +45,10 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
-<<<<<<< HEAD
-  
-  <center>
-    <img src="">
-  </center>
 
-=======
+<body background="https://cdn1.vectorstock.com/i/1000x1000/09/90/burst-red-and-black-background-with-ray-and-star-l-vector-2850990.jpg">
+
  
->>>>>>> 6551c1d65c8ceb2c8b6d2e4f7f4ac2bb1e1944f6
 <!-- NavBar begins here -->
 <center>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -63,6 +58,7 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+         
         <li class="nav-item active">
 
             <a href="../../index.html">
