--- a/purchase-item/index.html
+++ b/purchase-item/index.html
@@ -36,7 +36,7 @@
       width: 50%;
       height: 50%;
   }
-  body {background-color: lightgrey;}
+  body {background-color: rgb(252, 252, 252);}
   </style>
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
@@ -92,17 +92,17 @@
 
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-8.html">Size 8</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-8.5.html">Size 8.5</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-9.html">Size 9</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-9.5.html">Size 9.5</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-10.html">Size 10</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-10.5.html">Size 10.5</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-11.html">Size 11</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/sizes-11.5.html">Size 11.5</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-12.html">Size 12</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-13.html">Size 13</a>
-        <a class="dropdown-item" href="./shop/sneaker-sizes/size-14.html">Size 14</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-8.html">Size 8</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-8.5.html">Size 8.5</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-9.html">Size 9</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-9.5.html">Size 9.5</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-10.html">Size 10</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-10.5.html">Size 10.5</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-11.html">Size 11</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/sizes-11.5.html">Size 11.5</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-12.html">Size 12</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-13.html">Size 13</a>
+        <a class="dropdown-item" href="../shop/sneaker-sizes/size-14.html">Size 14</a>
         </div> 
      
 <!-- Dropdown NavBar 2 Ends Here -->
