--- a/shop/brand-new/page1.html
+++ b/shop/brand-new/page1.html
@@ -46,8 +46,7 @@
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
 
-<body background="https://cdn1.vectorstock.com/i/1000x1000/09/90/burst-red-and-black-background-with-ray-and-star-l-vector-2850990.jpg">
-
+  <body style="background-image:url('https://images.wallpaperscraft.com/image/black_background_red_color_paint_explosion_burst_9844_1920x1080.jpg');">
  
 <!-- NavBar begins here -->
 <center>
