--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -45,6 +45,8 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
+
+  <body style="background-image:url('https://images.wallpaperscraft.com/image/black_background_red_color_paint_explosion_burst_9844_1920x1080.jpg');">
   
 <!-- NavBar begins here -->
 <center>
@@ -70,10 +72,10 @@
 
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="./Brand-new/page1.html">Brand New</a>
-        <a class="dropdown-item" href="./used-9.10/page1.html">Used (9/10 Condition)</a>
-        <a class="dropdown-item" href="./used-8.10/page1.hmtl">Used (8/10 Condition)</a>
-        <a class="dropdown-item" href="./kickback-steals/page1.html">KickBack Steals</a>
+        <a class="dropdown-item" href="../Brand-new/page1.html">Brand New</a>
+        <a class="dropdown-item" href="../used-9.10/page1.html">Used (9/10 Condition)</a>
+        <a class="dropdown-item" href="../used-8.10/page1.html">Used (8/10 Condition)</a>
+        <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
@@ -341,6 +343,7 @@
 
   </div>
   <!-- /.container -->
+</div>
 
   <center >
     <div class="pagination">
