--- a/shop/sneaker-sizes/size-10.html
+++ b/shop/sneaker-sizes/size-10.html
@@ -138,7 +138,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Sneaker Sizes 10</h1>
+        <h1 class="my-4" style="color:white">Sneaker Sizes 10</h1>
         <div class="list-group">
             <a href="../used-9.10/page1.html" class="list-group-item">Used (9/10 Condition)</a>
             <a href="../used-8.10/page1.html" class="list-group-item">Used (8/10 Condition) </a>
