--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -18,6 +18,7 @@
   <link href="vendor/bootstrap/css/bootstrap.css" rel="style">
 
   <link href="css/page1-style.css" rel="stylesheet">
+  <link href="css/social-icon.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 
     <!-- social Icons Begin -->
