--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -18,6 +18,8 @@
 
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/social-icon.css" rel="stylesheet">
+
 
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
@@ -25,7 +27,9 @@
 <!-- ----------------------------------------------------------------- -->
 
 
- 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
 
 
@@ -348,7 +352,7 @@
   <center >
     <div class="pagination">
    
-        <a href="./page1.html"></a>
+        <a href="./page1.html">1</a>
         <a href="./page2.html" class="active">2</a>
     
 
