--- a/shop/used-9.10/page2.html
+++ b/shop/used-9.10/page2.html
@@ -15,6 +15,7 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/page2-style.css">
+  <link rel="stylesheet" href="css/social-icon.css">
 
     <!-- social Icons Begin -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
