--- a/shop/used-9.10/page3.html
+++ b/shop/used-9.10/page3.html
@@ -15,6 +15,7 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/page3-style.css">
+  <link href="css/social-icon.css" rel="stylesheet">
 
 
     <!-- social Icons Begin -->
