--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -419,7 +419,7 @@
 
   <!-- Footer -->
 
-  <footer class="py-5 bg-dark">
+  <footer>
       <div class="container" style="display:inline-block; max-width:100%">
         <div id="left-footer">
           <h5 class="m-0 text-center text-white" text>
