--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -362,7 +362,7 @@
   
   <!-- Footer -->
 
-  <footer class="py-5 bg-dark">
+  <footer>
       <div class="container" style="display:inline-block; max-width:100%">
         <div id="left-footer">
           <h5 class="m-0 text-center text-white" text> The KikBack &copy; 2019</h5>
