--- a/shop/sneaker-sizes/size-10.5.html
+++ b/shop/sneaker-sizes/size-10.5.html
@@ -250,34 +250,29 @@
 
   </div>
   <!-- /.container -->
+</div>
 
 
 
+<!-- Footer -->
 
-
-
-
-
-
-
-
-
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
-
-      <div class="social-icons">
-          <a href="https://www.instagram.com/thekikback/">
-              <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://facebook.com/thekikback">
-            <i class="fab fa-facebook"></i>
-          </a>  
+<footer>
+  <div class="container" style="display:inline-block; max-width:100%">
+    <div id="left-footer">
+      <h5 class="m-0 text-center text-white" text> The KikBack &copy; 2019</h5>
     </div>
-    <!-- /.container -->
-  </footer>
+    
+
+  <!-- social icons -->
+  <div id="right-footer">
+        <ul class="social-icon">
+            <li><a href="https://www.facebook.com/Thekikback/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/thekikback/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            </ul>
+            <!-- </social icons> -->
+</div>
+ 
+</footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
