--- a/shop/sneaker-sizes/size-8.html
+++ b/shop/sneaker-sizes/size-8.html
@@ -18,6 +18,8 @@
 
   <!-- Custom styles for this template -->
   <link href="./css/sneaker-sizes.css" rel="stylesheet">
+  <link href="./css/social-icons.css" rel="stylesheet">
+
 
   <!-- social Icons Begin -->
 <meta charset="utf-8">
@@ -261,6 +263,8 @@
   <!-- /.container -->
   </div>
 
+  <br>
+  <br>
 
 
 
