--- a/shop/sneaker-sizes/size-13.html
+++ b/shop/sneaker-sizes/size-13.html
@@ -18,6 +18,8 @@
 
   <!-- Custom styles for this template -->
   <link href="./css/sneaker-sizes.css" rel="stylesheet">
+  <link href="./css/social-icons.css" rel="stylesheet">
+
 
   <!-- social Icons Begin -->
 <meta charset="utf-8">
