--- a/shop/sneaker-sizes/size-9.5.html
+++ b/shop/sneaker-sizes/size-9.5.html
@@ -8,8 +8,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Custom styles for this template -->
+<link href="./css/sneaker-sizes.css" rel="stylesheet">
+<link href="./css/social-icons.css" rel="stylesheet">
 
-<link rel="stylesheet" href="./css/sneaker-sizes.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
