--- a/shop/kickback-steals/page1.html
+++ b/shop/kickback-steals/page1.html
@@ -18,6 +18,9 @@
 
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
+    <link href="css/social-icon.css" rel="stylesheet">
+
+
 
 </head> <!-- header ends here -->
 <!-- ----------------------------------------------------------------- -->
@@ -79,7 +82,29 @@
       </div>
 <!-- Dropdown NavBar 1 Ends Here -->
 
-<!-- DropDown NavBar 2 Begins Here -->
+ <!-- DropDown NavBar 2 Begins Here  -->
+ <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     Sneaker Size
+
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      <a class="dropdown-item" href="../sneaker-sizes/size-8.html">Size 8</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-8.5.html">Size 8.5</a>
+      <a class="dropdown-item" href="./../sneaker-sizes/size-9.html">Size 9</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-9.5.html">Size 9.5</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-10.html">Size 10</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-10.5.html">Size 10.5</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-11.html">Size 11</a>
+      <a class="dropdown-item" href="../sneaker-sizes/sizes-11.5.html">Size 11.5</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-12.html">Size 12</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-13.html">Size 13</a>
+      <a class="dropdown-item" href="../sneaker-sizes/size-14.html">Size 14</a>
+      </div> 
+   
+<!-- Dropdown NavBar 2 Ends Here -->
+
+<!-- DropDown NavBar 3 Begins Here -->
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Repair
@@ -244,6 +269,7 @@
 
   </div>
   <!-- /.container -->
+  </div>
 
 
 
@@ -260,22 +286,24 @@
 
  
  <!-- Footer -->
- <footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white"> The KikBack &copy; 2019</p>
-    </div>
-    <div class="social-icons">
-          <a href="https://www.instagram.com/thekikback/">
-              <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://facebook.com/thekikback">
-            <i class="fab fa-facebook"></i>
-          </a>  
-                     
-  
-  </div>
+ <footer>
  
-</footer>
+    <div class="container" style="display:inline-block; max-width:100%">
+      <div id="left-footer">
+        <h5 class="m-0 text-center text-white" text> The KikBack &copy; 2019</h5>
+      </div>
+      
+  
+    <!-- social icons -->
+    <div id="right-footer">
+          <ul class="social-icon">
+              <li><a href="https://www.facebook.com/Thekikback/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.instagram.com/thekikback/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+              </ul>
+              <!-- </social icons> -->
+  </div>
+   
+  </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
