--- a/shop/used-9.10/page1.html
+++ b/shop/used-9.10/page1.html
@@ -60,7 +60,7 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
-  
+  <body style="background-image:url('https://images.wallpaperscraft.com/image/black_background_red_color_paint_explosion_burst_9844_1920x1080.jpg');">
     <div class="header">
     <center>
       
