--- a/shop/sneaker-sizes/size-8.html
+++ b/shop/sneaker-sizes/size-8.html
@@ -12,18 +12,20 @@
 
 <!-- Custom styles for this template -->
 <link href="./css/sneaker-sizes.css" rel="stylesheet">
+<link href="./css/social-icon.css" rel="stylesheet">
+<link href="../simple-popup-box.css" rel="stylesheet">
 
 <!-- ------------------- declare Social Icons begins here ----------------------- -->
-<link href="./css/social-icon.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.js"></script>
+<script src="../simple-popup-box.js"></script>
 <!-- ------------------- declare Social Icons ends here ----------------------- -->
 
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
 
 
@@ -144,6 +146,8 @@
         </div>
       </nav>    
   <!--/NavBar Ends here-->
+  
+  
 
   <!-- Page Content -->
   <div class="container">
@@ -171,8 +175,21 @@
             <div class="card h-100">
               <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/237886475/8989D7FF-A81C-4EE0-92E7-0359FBA4F163.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
+                  <a class="trigger_popup_fricc"> Pure Money 4's </a>
+
+                  <div class="hover_bkgr_fricc">
+                      <span class="helper"></span>
+                      <div>
+                          <div class="popupCloseButton">X</div>
+                          <p>Pure Money 4's<br />$140.00 <br /> 
+                            Size 8 with original box<br />
+                            Shoes are 9/10 condition<br />
+                            Shoes will be shipped double boxed with tracking
+                            <img src="https://assets.bigcartel.com/product_images/237886475/8989D7FF-A81C-4EE0-92E7-0359FBA4F163.jpeg?auto=format&fit=max&h=350&w=200"
+                            </p>
+                      </div>
+                  </div>
                 <h4 class="card-title">
-                  <a href="#">Pure Money 1's</a>
                 </h4>
                 <h5>$140.00</h5>
                 <p class="card-text">
@@ -187,6 +204,7 @@
             <div class="card h-100">
               <a href="#"><img class="card-img-top" src="https://assets.bigcartel.com/product_images/237886430/7A4F8CC0-F192-4D5B-BE1A-7A8CDEF17ED5.jpeg?auto=format&fit=max&h=600&w=600" alt=""></a>
               <div class="card-body">
+                
                 <h4 class="card-title">
                   <a href="#"> NYC 10's</a>
                 </h4>
@@ -287,8 +305,7 @@
 </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 
 </body> <!-- body ends here -->
 <!-- ----------------------------------------------------------------- -->
