--- a/restoration-page.html
+++ b/restoration-page.html
@@ -165,12 +165,10 @@
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
-<div class="row">
-  <div class="col-sm"><h1>test</h1></div>
-  <div class"col-sm">
+
 <!-- Comparison Slider -->
     <center>
-      
+      <h1 style="color: white;">Before/After</h1>
 
 
     <div class="img-comp-container" id="comparison-slider">
@@ -189,9 +187,7 @@
 
 <!-- Comparison Ends  -->
 
-</div>
-<div class= "col-sm"><h1>test</h1></div>
-</div>
+
         
 <!-- ----------------------------------------------------------------- -->
 <!-- ----------------------------------------------------------------- -->
