--- a/shop/sneaker-sizes/sizes-11.5.html
+++ b/shop/sneaker-sizes/sizes-11.5.html
@@ -113,7 +113,7 @@
     <!-- DropDown NavBar 2 Begins Here -->
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Repair
+            Restoration
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">.</a>
