--- a/shop/brand-new/page2.html
+++ b/shop/brand-new/page2.html
@@ -17,6 +17,7 @@
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
+  <link href="css/page2-style.css" rel="stylesheet">
   <link href="css/shop-homepage.css" rel="stylesheet">
   <link href="css/social-icon.css" rel="stylesheet">
 
@@ -50,7 +51,6 @@
 <!-- ----------------------------------------------------------------- -->
 <body> <!-- body begins here -->
 
-  <body style="background-image:url('https://images.wallpaperscraft.com/image/black_background_red_color_paint_explosion_burst_9844_1920x1080.jpg');">
   
 <!-- NavBar begins here -->
 <center>
