--- a/shop/sneaker-sizes/size-13.html
+++ b/shop/sneaker-sizes/size-13.html
@@ -84,6 +84,7 @@
                 <a class="dropdown-item" href="../../shop/used-9.10/page1.html">Used (9/10 Condition)</a>
                 <a class="dropdown-item" href="../../shop/used-8.10/page1.html">Used (8/10 Condition)</a>
                 <a class="dropdown-item" href="../../shop/kickback-steals/page1.html">KickBack Steals</a>
+                <a class="dropdown-item" href="../../shop/grade-school/grade-school.html">Grade School</a>
             </div>
       <!-- Dropdown NavBar 1 Ends Here -->
       
