--- a/shop/used-8.10/page1.html
+++ b/shop/used-8.10/page1.html
@@ -81,6 +81,7 @@
           <a class="dropdown-item" href="../used-9.10/page1.html">Used (9/10 Condition)</a>
           <a class="dropdown-item" href="../used-8.10/page1.hmtl">Used (8/10 Condition)</a>
           <a class="dropdown-item" href="../kickback-steals/page1.html">KickBack Steals</a>
+          <a class="dropdown-item" href="../grade-school/grade-school.html">Grade School</a>
         </div>
   <!-- Dropdown NavBar 1 Ends Here -->
 
