--- a/restoration-page.html
+++ b/restoration-page.html
@@ -195,7 +195,7 @@
         <td><img class="insta" src="./img/Sole-icing.jpg"></td>
         <td><img class="insta" src="./img/deep-cleaning.jpg"></td>
         <td><img class="insta" src="./img/Sole-icing.jpg"></td>
-        <td><img class="insta" src="./img/Sole-icing.jpg"></td>
+        <td><img class="insta" src="./img/scuff-treatment.jpg"></td>
         <td><img class="insta" src="./img/Sole-icing.jpg"></td>
     
         
