--- a/shop/sneaker-sizes/size-9.5.html
+++ b/shop/sneaker-sizes/size-9.5.html
@@ -107,14 +107,10 @@
   <!-- Dropdown NavBar 1 Ends Here -->
       <!-- DropDown NavBar 2 Begins Here -->
       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown" href="../..restoration-page.html"  aria-haspopup="true" aria-expanded="false">
               Restoration
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">.</a>
-            <a class="dropdown-item" href="#">..</a>
-            <a class="dropdown-item" href="#">...</a>
-          </div>
+         
         <!-- Dropdown NavBar 2 Ends Here -->
       
         <li class="nav-item">
@@ -124,10 +120,10 @@
            </li>
             </ul>
 
-            <a href="checkout.html" a class="a"> <i class="fa fa-shopping-cart" 
+            <a href="../../purchase-item/checkout-page.html" a class="a"> <i class="fa fa-shopping-cart" 
               aria-hidden="true" 
               style="padding-right:50px;"></i></a>
-
+  
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
