--- a/shop/sneaker-sizes/size-11.html
+++ b/shop/sneaker-sizes/size-11.html
@@ -111,7 +111,7 @@
             
     <!-- DropDown NavBar 2 Begins Here -->
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown" href="../../restoration-page.html"  aria-haspopup="true" aria-expanded="false">
             Restoration
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -128,7 +128,7 @@
             </li>
           </ul>
 
-          <a href="checkout.html" a class="a"> <i class="fa fa-shopping-cart" 
+          <a href="../../purchase-item/checkout-page.html" a class="a"> <i class="fa fa-shopping-cart" 
             aria-hidden="true" 
             style="padding-right:50px;"></i></a>
 
@@ -335,7 +335,8 @@
 <footer>
   <div class="container" style="display:inline-block; max-width:100%">
     <div id="left-footer">
-      <h5 class="m-0 text-center text-white" text> The KikBack &copy; 2019</h5>
+      <h5 class="m-0 text-center text-white" text style="
+      padding-top: 47px;"> The KikBack &copy; 2019</h5>
     </div>
     
 
